--- a/proyecto/templates/inicio.html
+++ b/proyecto/templates/inicio.html
@@ -284,7 +284,7 @@
         <div class="logo-container">
             <div class="logo-text">
                 <div class="city-text">CITY<i class="bike-icon fas fa-bicycle"></i></div>
-                <div class="n-bike-text">N·BIKE</div>
+                <div class="-bike-text">N·BIKE</div>
             </div>
         </div>
         
@@ -304,7 +304,7 @@
         <div class="station-cards">
             <div class="station-card">
                 <div class="station-image">
-                    <img src="/api/placeholder/400/200" alt="Estación centro">
+                    <img src="/static/Encicla-abril-5-2023.jpg" alt="Estación centro">
                 </div>
                 <div class="station-info">
                     <div class="station-name">Estación centro</div>
@@ -314,7 +314,7 @@
             
             <div class="station-card">
                 <div class="station-image">
-                    <img src="/api/placeholder/400/200" alt="Estación norte">
+                    <img src="/static/bb.jpg"alt="Estación norte">
                 </div>
                 <div class="station-info">
                     <div class="station-name">Estación norte</div>
@@ -324,7 +324,7 @@
             
             <div class="station-card">
                 <div class="station-image">
-                    <img src="/api/placeholder/400/200" alt="Estación sur">
+                    <img src="/static/images (1).jpg"alt="Estación sur">
                 </div>
                 <div class="station-info">
                     <div class="station-name">Estación sur</div>
@@ -334,7 +334,7 @@
             
             <div class="station-card">
                 <div class="station-image">
-                    <img src="/api/placeholder/400/200" alt="Estación occidente">
+                    <img src="/static/images.jpg" alt="Estación occidente">
                 </div>
                 <div class="station-info">
                     <div class="station-name">Estación occidente</div>
@@ -344,7 +344,7 @@
             
             <div class="station-card">
                 <div class="station-image">
-                    <img src="/api/placeholder/400/200" alt="Estación oriente">
+                    <img src="/static/descarga.jpg" alt="Estación oriente">
                 </div>
                 <div class="station-info">
                     <div class="station-name">Estación oriente</div>
@@ -352,21 +352,13 @@
                 </div>
             </div>
             
-            <div class="station-card">
-                <div class="station-image">
-                    <img src="/api/placeholder/400/200" alt="Estación universidad">
-                </div>
-                <div class="station-info">
-                    <div class="station-name">Estación universidad</div>
-                    <div class="bikes-available"><i class="fas fa-bicycle"></i> 4 bicicletas disponibles</div>
-                </div>
-            </div>
+            
         </div>
         
         <div class="nav-bar">
             <i class="fas fa-home nav-icon active"></i>
             <i class="far fa-heart nav-icon"></i>
-            <i class="far fa-map nav-icon"></i>
+            <i class="far fa-map nav-icon" onclick="window.location.href='/mapa'"></i>
             <i class="fas fa-bicycle nav-icon"></i>
             <i class="fas fa-user nav-icon"></i>
         </div>
