--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CITY BIKE - Perfil de Usuario</title>
     <link rel="stylesheet" href="/static/css/perfil.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <div class="background-lines"></div>
@@ -96,12 +97,12 @@
         </div>
     </div>
 
-     <div class="nav-bar">
-            <i class="fas fa-home nav-icon active"onclick="window.location.href='/inicio'"></i>
-            <i class="far fa-heart nav-icon"></i>
-            <i class="far fa-map nav-icon" onclick="window.location.href='/mapa'"></i>
-            <i class="fas fa-bicycle nav-icon"></i>
-            <i class="fas fa-user nav-icon" onclick="window.location.href='/perfil'"></i>
-        </div>
+    <div class="nav-bar">
+        <i class="fas fa-home nav-icon" onclick="window.location.href='/inicio'"></i>
+        <i class="far fa-heart nav-icon"></i>
+        <i class="far fa-map nav-icon" onclick="window.location.href='/mapa'"></i>
+        <i class="fas fa-bicycle nav-icon"></i>
+        <i class="fas fa-user nav-icon active" onclick="window.location.href='/perfil'"></i>
+    </div>
 </body>
 </html>
