--- a/templates/mapa.html
+++ b/templates/mapa.html
@@ -46,7 +46,17 @@
             <i class="fas fa-bicycle nav-icon"></i>
             <i class="fas fa-user nav-icon" onclick="window.location.href='/perfil'"></i>
         </div>
+    </div> <!-- cierre de .app-container -->
+
+    <div class="nav-bar">
+        <i class="fas fa-home nav-icon" onclick="window.location.href='/inicio'"></i>
+        <i class="far fa-heart nav-icon"></i>
+        <i class="far fa-map nav-icon active" onclick="window.location.href='/mapa'"></i>
+        <i class="fas fa-bicycle nav-icon"></i>
+        <i class="fas fa-user nav-icon" onclick="window.location.href='/perfil'"></i>
     </div>
+</body>
+</html>
 
     <script>
         // Inicializar el mapa en Medellín
