--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -87,9 +87,9 @@
         
         <div class="nav-bar">
             <i class="fas fa-home nav-icon active"onclick="window.location.href='/inicio'"></i>
-            <i class="far fa-heart nav-icon"></i>
+            <i class="far fa-heart nav-icon"onclick="window.location.href='/puntos'"></i>
             <i class="far fa-map nav-icon" onclick="window.location.href='/mapa'"></i>
-            <i class="fas fa-bicycle nav-icon"></i>
+            <i class="fas fa-bicycle nav-icon"onclick="window.location.href='/planes'"></i>
             <i class="fas fa-user nav-icon" onclick="window.location.href='/perfil'"></i>
         </div>
     </div>
