--- a/templates/puntos.html
+++ b/templates/puntos.html
@@ -63,3 +63,11 @@
                 <div class="history-points">+25</div>
             </div>
             
+     <div class="nav-bar">
+            <i class="fas fa-home nav-icon active"onclick="window.location.href='/inicio'"></i>
+            <i class="far fa-heart nav-icon"onclick="window.location.href='/puntos'"></i>
+            <i class="far fa-map nav-icon" onclick="window.location.href='/mapa'"></i>
+            <i class="fas fa-bicycle nav-icon"onclick="window.location.href='/planes'"></i>
+            <i class="fas fa-user nav-icon" onclick="window.location.href='/perfil'"></i>
+        </div>
+    </div>
